<resources>
    <string name="app_name">AndroidBooster</string>
    <string name="done">done</string>
    <string name="my_device_status">My Device Status</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="system_os_version">System OS version</string>
    <string name="root_state">Root State</string>
    <string name="firmware">Firmware</string>
    <string name="cpu_hardware">CPU Hardware</string>
    <string name="cpu_model">CPU Model</string>
    <string name="cpu_cores">Cpu Cores</string>
    <string name="cpu_frequency">CPU Frequency</string>
    <string name="storage">Storage</string>
    <string name="ram">RAM Space(Available/Total)</string>
    <string name="rom">ROM Space(Available/Total)</string>
    <string name="sdcard">SD card Space(Available/Total)</string>
    <string name="screen">Screen</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="multiple_touch">Screen Multiple-touch Support</string>
    <string name="screen_density">Screen Density</string>
    <string name="sensor">Sensor</string>
    <string name="accelerometer_sensor">Accelerometer Sensor</string>
    <string name="magnetic_field_sensor">Magnetic Field Sensor</string>
    <string name="orientation_sensor">Orientation Sensor</string>
    <string name="gyroscope_sensor">Gyroscope Sensor</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="distance_sensor">Distance Sensor</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="cpu">CPU</string>
</resources>
