<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DeviceStatusActivity"
    android:weightSum="10">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorButton"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="State info"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CPU"/>
            <ProgressBar
                android:id="@+id/progressbar_cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="30"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RAM"/>
            <ProgressBar
                android:id="@+id/progressbar_ram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="40"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Storage"/>
            <ProgressBar
                android:id="@+id/progressbar_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="50"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton"/>
            <TextView
                android:id="@+id/textview_name_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="name device"
                android:textSize="20sp"
                android:textColor="@color/colorButton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_os_version"/>
            <TextView
                android:id="@+id/textview_os_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Android 7.0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/root_state"/>
            <TextView
                android:id="@+id/textview_root_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Not Root"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firmware"/>
            <TextView
                android:id="@+id/textview_firmware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="jdjajlaflafal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_hardware"/>
            <TextView
                android:id="@+id/textview_cpu_hardware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="No Info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_model"/>
            <TextView
                android:id="@+id/textview_arch_cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Info"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_cores"/>
            <TextView
                android:id="@+id/textview_cpu_cores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Info"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_frequency" />
            <TextView
                android:id="@+id/textview_cpu_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2016Mhz"
                android:layout_marginStart="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storage"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ram"/>
            <TextView
                android:id="@+id/textview_info_ram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="581/2846"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rom"/>
            <TextView
                android:id="@+id/textview_info_rom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="754/9380"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdcard"/>
            <TextView
                android:id="@+id/textview_info_sdcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="754/9380MB"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_resolution"/>
            <TextView
                android:id="@+id/textview_screen_resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1080*2050"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_density" />
            <TextView
                android:id="@+id/textview_screen_density"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="480 DPI"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiple_touch"/>
            <TextView
                android:id="@+id/textview_screen_touch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Supported"
                android:layout_marginStart="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer_sensor"/>
            <TextView
                android:id="@+id/textview_accelerometer_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/magnetic_field_sensor"/>
            <TextView
                android:id="@+id/textview_magnetic_field_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientation_sensor"/>
            <TextView
                android:id="@+id/textview_orientation_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gyroscope_sensor"/>
            <TextView
                android:id="@+id/textview_gyroscope_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_sensor"/>
            <TextView
                android:id="@+id/textview_light_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_sensor"/>
            <TextView
                android:id="@+id/textview_distance_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Supported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_sensor"/>
            <TextView
                android:id="@+id/textview_temperature_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="not Supported"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>